[package]
name = "rftp"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# Use rustls rather than native-tls because FTPS data connections need
# session resumption on stricter servers like test.rebex.net.
suppaftp = { version = "8", features = ["rustls-ring", "deprecated", "no-log"] }
thiserror = "2"
toml = "1"
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
expect_used = "warn"
arithmetic_side_effects = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"              # only relevant on editions before 2024
large_futures = "warn"
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[profile.release]
opt-level = 3
lto = "fat"          # TODO: may switch to "thin" for almost same gains with much faster linking
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
incremental = false
